@@ -201,15 +201,13 @@ span.unwritable  {
 /* Header */
 #border-top.h_blue {
 	background: url(../images/j_header_middle.png) repeat-x;
-}
-
-#border-top.h_blue div {
-	background: url(../images/j_header_right.png) 100% 0 no-repeat;
-}
-
-#border-top.h_blue div div {
-	background: url(../images/j_header_left.png) no-repeat;
 	height: 54px;
+	-webkit-border-top-right-radius: 8px;
+	-webkit-border-top-left-radius: 8px;
+	-moz-border-radius-topleft: 8px;
+	-moz-border-radius-topright: 8px;
+	border-top-right-radius: 8px;
+	border-top-left-radius: 8px;
 }
 
 #border-top .title,
